Add Home page design

--- a/index.html
+++ b/index.html
@@ -8,10 +8,38 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <h1>Hello</h1>
+        <div class="c-hero">
+            <h1 class="c-hero__title text-massive">Your body is art</h1>
+            <h1 class="c-hero__title__secondary">move for yourself</h1>
+        </div>
 
-        <h4>Hello</h4>
+        <div class="c-goals">
+            <h2 class="c-goals__title">Our goals</h2>
 
-        <h6>Hello</h6>
+            <div class="c-goals__collaborate">
+                <div class="c-goals__item">
+                    <img class="c-goals__image" src="/assets/images/goals/hand-love.svg" alt="hand-love" />
+
+                    <h4 class="c-goals__desc h4--small">Learn to love yourself</h4>
+                </div>
+                <div class="c-goals__item">
+                    <img class="c-goals__image" src="/assets/images/goals/hand-love.svg" alt="hand-love" />
+
+                    <h4 class="c-goals__desc h4--small">Create a united community</h4>
+                </div>
+                <div class="c-goals__item">
+                    <img class="c-goals__image" src="/assets/images/goals/hand-love.svg" alt="hand-love" />
+
+                    <h4 class="c-goals__desc h4--small">Increase our confidence</h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="c-join-us">
+            <a href="#" class="o-btn o-btn--wide">Join Now</a>
+
+            <p class="c-join-us__title c-join-us__title--space-top h2">Move because we love each other,</p>
+            <p class="c-join-us__title h2">Not because we hate each <span class="c-join-us__colorful">other.</span></p>
+        </div>
     </body>
 </html>
