--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     <h4 class="c-goals__desc h4--small">Learn to love yourself</h4>
                 </div>
                 <div class="c-goals__item">
-                    <img class="c-goals__image" src="/assets/images/goals/hand-love.svg" alt="hand-love" />
+                    <img class="c-goals__image" src="/assets/images/goals/holding-hands.svg" alt="community" />
 
                     <h4 class="c-goals__desc h4--small">Create a united community</h4>
                 </div>
                 <div class="c-goals__item">
-                    <img class="c-goals__image" src="/assets/images/goals/hand-love.svg" alt="hand-love" />
+                    <img class="c-goals__image" src="/assets/images/goals/muscles.svg" alt="muscles" />
 
                     <h4 class="c-goals__desc h4--small">Increase our confidence</h4>
                 </div>
