--- a/routines.html
+++ b/routines.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Collabortae theme</title>
         <script src="https://kit.fontawesome.com/6225553e61.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./assets/css/style.css" />
         <link rel="stylesheet" href="./assets/css/header.css" />
