--- a/routines.html
+++ b/routines.html
@@ -21,7 +21,7 @@
                         </a>
                         <ul class="menu">
                             <li class="menu__item">
-                                <a href="#" class="menu__link menu__link--active">Home</a>
+                                <a href="/collaborate/index.html" class="menu__link menu__link--active">Home</a>
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">instructores</a>
@@ -30,7 +30,7 @@
                                 <a href="#" class="menu__link">Comunidad</a>
                             </li>
                             <li class="menu__item">
-                                <a href="/routines.html" class="menu__link">Routines</a>
+                                <a href="/collaborate/routines.html" class="menu__link">Routines</a>
                             </li>
                             <li class="menu__item">
                                 <a href="#" class="menu__link">Contacto</a>
