fix: footer social icons mismatch issue fixed
Svg icons exported from design added as footer social icons

--- a/single-routine.html
+++ b/single-routine.html
@@ -58,16 +58,28 @@
             <div class="icon">
                 <ul class="socials">
                     <li>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-facebook-f"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                    </li>
-                </ul>
-            </div>
+            <a href="#"
+              ><img
+                class="footer-social__icon"
+                src="./assets/images/icons/insta.svg"
+                alt="insta icon"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                class="footer-social__icon"
+                src="./assets/images/icons/twit.svg"
+                alt="twit icon"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                class="footer-social__icon"
+                src="./assets/images/icons/facebook.svg"
+                alt="facebook icon"
+            /></a>
 
             <div class="header__btn">
                 <a href="#" class="header__btns">Registrate</a>
