--- a/single-routine.html
+++ b/single-routine.html
@@ -1,63 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Collabortae theme</title>
-        <script src="https://kit.fontawesome.com/6225553e61.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./assets/css/style.css" />
-        <link rel="stylesheet" href="./assets/css/header.css" />
-        <link rel="stylesheet" href="./assets/css/responsive.css" />
-        <link rel="stylesheet" href="./assets/css/footer.css" />
-    </head>
-    <body>
-        <header class="header">
-            <div class="container">
-                <nav class="nav">
-                    <div class="nav__wrapper">
-                        <a href="#" class="app-logo">
-                            <img src="./assets/images/header-logo.svg" alt="Camping Web" class="app-logo__img" />
-                        </a>
-                        <ul class="menu">
-                            <li class="menu__item">
-                                <a href="/collaborate/index.html" class="menu__link menu__link--active">Home</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="#" class="menu__link">instructores</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="#" class="menu__link">Comunidad</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="/collaborate/routines.html" class="menu__link">Routines</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="#" class="menu__link">Contacto</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="header__links">
-                        <a href="#" class="header__link">Registrate</a>
-                        <a href="#" class="header__link header__link--border">iniciar sesion</a>
-                    </div>
-                    <div class="nav__btn">
-                        <span class="nav__btn-line"></span>
-                    </div>
-                </nav>
-            </div>
-        </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Collabortae theme</title>
+    <script
+      src="https://kit.fontawesome.com/6225553e61.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/header.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
+    <link rel="stylesheet" href="./assets/css/footer.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <div class="nav__wrapper">
+            <a href="#" class="app-logo">
+              <img
+                src="./assets/images/header-logo.svg"
+                alt="Camping Web"
+                class="app-logo__img"
+              />
+            </a>
+            <ul class="menu">
+              <li class="menu__item">
+                <a
+                  href="/collaborate/index.html"
+                  class="menu__link menu__link--active"
+                  >Home</a
+                >
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">instructores</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Comunidad</a>
+              </li>
+              <li class="menu__item">
+                <a href="/collaborate/routines.html" class="menu__link"
+                  >Routines</a
+                >
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Contacto</a>
+              </li>
+            </ul>
+          </div>
+          <div class="header__links">
+            <a href="#" class="header__link">Registrate</a>
+            <a href="#" class="header__link header__link--border"
+              >iniciar sesion</a
+            >
+          </div>
+          <div class="nav__btn">
+            <span class="nav__btn-line"></span>
+          </div>
+        </nav>
+      </div>
+    </header>
 
-        
+    <footer class="footer">
+      <div class="footer-content">
+        <img
+          src="./assets/images/logo-footer.svg"
+          alt="Camping Web"
+          class="footer-logo__img"
+        />
+      </div>
 
-        <footer class="footer">
-            <div class="footer-content">
-                <img src="./assets/images/logo-footer.svg" alt="Camping Web" class="footer-logo__img" />
-            </div>
-
-            <div class="icon">
-                <ul class="socials">
-                    <li>
+      <div class="icon">
+        <ul class="socials">
+          <li>
             <a href="#"
               ><img
                 class="footer-social__icon"
@@ -80,11 +97,14 @@
                 src="./assets/images/icons/facebook.svg"
                 alt="facebook icon"
             /></a>
+          </li>
+        </ul>
+      </div>
 
-            <div class="header__btn">
-                <a href="#" class="header__btns">Registrate</a>
-                <a href="#" class="header__btns header__link--border">iniciar sesion</a>
-            </div>
-        </footer>
-    </body>
+      <div class="header__btn">
+        <a href="#" class="header__btns">Registrate</a>
+        <a href="#" class="header__btns header__link--border">iniciar sesion</a>
+      </div>
+    </footer>
+  </body>
 </html>
