--- a/single-routine.html
+++ b/single-routine.html
@@ -28,9 +28,7 @@
             </a>
             <ul class="menu">
               <li class="menu__item">
-                <a
-                  href="/collaborate/index.html"
-                  class="menu__link menu__link--active"
+                <a href="/index.html" class="menu__link menu__link--active"
                   >Home</a
                 >
               </li>
@@ -41,9 +39,7 @@
                 <a href="#" class="menu__link">Comunidad</a>
               </li>
               <li class="menu__item">
-                <a href="/collaborate/routines.html" class="menu__link"
-                  >Routines</a
-                >
+                <a href="/routines.html" class="menu__link">Routines</a>
               </li>
               <li class="menu__item">
                 <a href="#" class="menu__link">Contacto</a>
