--- a/index.html
+++ b/index.html
@@ -29,30 +29,18 @@
                         <div class="c-nav__list js-nav__list">
                             <ul class="s-nav__list nav-menu">
                                 <li class="c-nav__menu-item">
-                                    <a
-                                        class="c-nav__menu-link h5--secondary"
-                                        href="./index.html"
-                                    >
-                                        Home
-                                    </a>
+                                    <a class="c-nav__menu-link h5--secondary" href="./index.html"> Home </a>
                                 </li>
                                 <li class="c-nav__menu-item">
-                                    <a class="c-nav__menu-link h5--secondary" href="#">
+                                    <a class="c-nav__menu-link h5--secondary" href="./instructors.html">
                                         Instructors
                                     </a>
                                 </li>
                                 <li class="c-nav__menu-item">
-                                    <a class="c-nav__menu-link h5--secondary" href="#">
-                                        Community
-                                    </a>
+                                    <a class="c-nav__menu-link h5--secondary" href="#"> Community </a>
                                 </li>
                                 <li class="c-nav__menu-item">
-                                    <a
-                                        class="c-nav__menu-link h5--secondary"
-                                        href="./routines.html"
-                                    >
-                                        Routines
-                                    </a>
+                                    <a class="c-nav__menu-link h5--secondary" href="./routines.html"> Routines </a>
                                 </li>
                             </ul>
                         </div>
@@ -81,37 +69,19 @@
 
                     <div class="c-goals__collaborate">
                         <div class="c-goals__item">
-                            <img
-                                class="c-goals__image"
-                                src="./assets/images/goals/hand-love.svg"
-                                alt="hand-love"
-                            />
+                            <img class="c-goals__image" src="./assets/images/goals/hand-love.svg" alt="hand-love" />
 
-                            <h4 class="c-goals__desc h4--small">
-                                Learn to love yourself
-                            </h4>
+                            <h4 class="c-goals__desc h4--small">Learn to love yourself</h4>
                         </div>
                         <div class="c-goals__item">
-                            <img
-                                class="c-goals__image"
-                                src="./assets/images/goals/holding-hands.svg"
-                                alt="community"
-                            />
+                            <img class="c-goals__image" src="./assets/images/goals/holding-hands.svg" alt="community" />
 
-                            <h4 class="c-goals__desc h4--small">
-                                Create a united community
-                            </h4>
+                            <h4 class="c-goals__desc h4--small">Create a united community</h4>
                         </div>
                         <div class="c-goals__item">
-                            <img
-                                class="c-goals__image"
-                                src="./assets/images/goals/muscles.svg"
-                                alt="muscles"
-                            />
+                            <img class="c-goals__image" src="./assets/images/goals/muscles.svg" alt="muscles" />
 
-                            <h4 class="c-goals__desc h4--small">
-                                Increase our confidence
-                            </h4>
+                            <h4 class="c-goals__desc h4--small">Increase our confidence</h4>
                         </div>
                     </div>
                 </div>
@@ -119,9 +89,7 @@
                 <div class="c-join-us">
                     <a href="#" class="o-btn o-btn--wide">Join Now</a>
 
-                    <p class="c-join-us__title c-join-us__title--space-top h2">
-                        Move because we love each other,
-                    </p>
+                    <p class="c-join-us__title c-join-us__title--space-top h2">Move because we love each other,</p>
                     <p class="c-join-us__title h2">
                         Not because we hate each
                         <span class="c-join-us__colorful">other.</span>
@@ -133,33 +101,20 @@
         <footer id="colophon" class="c-footer">
             <div class="c-footer__container">
                 <div class="c-footer__logo">
-                    <img
-                        class="c-footer__logo-img"
-                        src="./assets/images/logo-footer.svg"
-                        alt="footer-logo"
-                    />
+                    <img class="c-footer__logo-img" src="./assets/images/logo-footer.svg" alt="footer-logo" />
                 </div>
 
                 <div class="c-footer__social">
                     <a class="c-footer__social-link" href="#" target="_blank">
-                        <span
-                            class="c-footer__social-icon iconify"
-                            data-icon="akar-icons:instagram-fill"
-                        ></span>
+                        <span class="c-footer__social-icon iconify" data-icon="akar-icons:instagram-fill"></span>
                     </a>
 
                     <a class="c-footer__social-link" href="#" target="_blank">
-                        <span
-                            class="c-footer__social-icon iconify"
-                            data-icon="cib:facebook-f"
-                        ></span>
+                        <span class="c-footer__social-icon iconify" data-icon="cib:facebook-f"></span>
                     </a>
 
                     <a class="c-footer__social-link" href="#" target="_blank">
-                        <span
-                            class="c-footer__social-icon iconify"
-                            data-icon="akar-icons:twitter-fill"
-                        ></span>
+                        <span class="c-footer__social-icon iconify" data-icon="akar-icons:twitter-fill"></span>
                     </a>
                 </div>
 
