--- a/single-routine.html
+++ b/single-routine.html
@@ -1,106 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collabortae theme</title>
-    <script
-      src="https://kit.fontawesome.com/6225553e61.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/header.css" />
-    <link rel="stylesheet" href="./assets/css/responsive.css" />
-    <link rel="stylesheet" href="./assets/css/footer.css" />
-  </head>
-  <body>
-    <header class="header">
-      <div class="container">
-        <nav class="nav">
-          <div class="nav__wrapper">
-            <a href="#" class="app-logo">
-              <img
-                src="./assets/images/header-logo.svg"
-                alt="Camping Web"
-                class="app-logo__img"
-              />
-            </a>
-            <ul class="menu">
-              <li class="menu__item">
-                <a href="/index.html" class="menu__link menu__link--active"
-                  >Home</a
-                >
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">instructores</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">Comunidad</a>
-              </li>
-              <li class="menu__item">
-                <a href="/routines.html" class="menu__link">Routines</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">Contacto</a>
-              </li>
-            </ul>
-          </div>
-          <div class="header__links">
-            <a href="#" class="header__link">Registrate</a>
-            <a href="#" class="header__link header__link--border"
-              >iniciar sesion</a
-            >
-          </div>
-          <div class="nav__btn">
-            <span class="nav__btn-line"></span>
-          </div>
-        </nav>
-      </div>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Collabortae theme</title>
+        <script src="https://kit.fontawesome.com/6225553e61.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/header.css" />
+        <link rel="stylesheet" href="./assets/css/responsive.css" />
+        <link rel="stylesheet" href="./assets/css/footer.css" />
+    </head>
+    <body>
+        <header id="masthead" class="c-header">
+            <div class="c-header__menu">
+                <div class="c-header__nav">
+                    <div class="c-header__branding js-header__branding">
+                        <img src="./assets/images/header-logo.svg" alt="menu-logo" />
+                    </div>
+                    <!-- .site-branding -->
 
-    <footer class="footer">
-      <div class="footer-content">
-        <img
-          src="./assets/images/logo-footer.svg"
-          alt="Camping Web"
-          class="footer-logo__img"
-        />
-      </div>
+                    <nav class="c-nav" id="site-navigation">
+                        <button
+                            class="c-nav__toggle c-nav__toggle--burger js-nav__toggle"
+                            aria-controls="primary-menu"
+                            aria-expanded="false"
+                            aria-label="primary-menu"
+                        >
+                            <span></span>
+                        </button>
+                        <div class="c-nav__list js-nav__list">
+                            <ul class="s-nav__list nav-menu">
+                                <li class="c-nav__menu-item">
+                                    <a class="c-nav__menu-link h5--secondary" href="./index.html"> Home </a>
+                                </li>
+                                <li class="c-nav__menu-item">
+                                    <a class="c-nav__menu-link h5--secondary" href="./instructors.html">
+                                        Instructors
+                                    </a>
+                                </li>
+                                <li class="c-nav__menu-item">
+                                    <a class="c-nav__menu-link h5--secondary" href="#"> Community </a>
+                                </li>
+                                <li class="c-nav__menu-item">
+                                    <a class="c-nav__menu-link h5--secondary" href="./routines.html"> Routines </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                    <!-- #site-navigation -->
+                </div>
 
-      <div class="icon">
-        <ul class="socials">
-          <li>
-            <a href="#"
-              ><img
-                class="footer-social__icon"
-                src="./assets/images/icons/insta.svg"
-                alt="insta icon"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                class="footer-social__icon"
-                src="./assets/images/icons/twit.svg"
-                alt="twit icon"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                class="footer-social__icon"
-                src="./assets/images/icons/facebook.svg"
-                alt="facebook icon"
-            /></a>
-          </li>
-        </ul>
-      </div>
+                <div class="c-header__cta">
+                    <a href="#" class="o-btn o-btn--has-right-space">Sign up</a>
+                    <a href="#" class="o-btn o-btn--secondary">Log in</a>
+                </div>
+            </div>
+            <!-- .c-header__menu -->
+        </header>
+        <!-- #masthead -->
 
-      <div class="header__btn">
-        <a href="#" class="header__btns">Registrate</a>
-        <a href="#" class="header__btns header__link--border">iniciar sesion</a>
-      </div>
-    </footer>
-  </body>
+        <footer id="colophon" class="c-footer">
+            <div class="c-footer__container">
+                <div class="c-footer__logo">
+                    <img class="c-footer__logo-img" src="./assets/images/logo-footer.svg" alt="footer-logo" />
+                </div>
+
+                <div class="c-footer__social">
+                    <a class="c-footer__social-link" href="#" target="_blank">
+                        <span class="c-footer__social-icon iconify" data-icon="akar-icons:instagram-fill"></span>
+                    </a>
+
+                    <a class="c-footer__social-link" href="#" target="_blank">
+                        <span class="c-footer__social-icon iconify" data-icon="cib:facebook-f"></span>
+                    </a>
+
+                    <a class="c-footer__social-link" href="#" target="_blank">
+                        <span class="c-footer__social-icon iconify" data-icon="akar-icons:twitter-fill"></span>
+                    </a>
+                </div>
+
+                <div class="c-footer__buttons">
+                    <a href="#" class="o-btn">Sign up</a>
+                    <a href="#" class="o-btn o-btn--secondary">Log in</a>
+                </div>
+            </div>
+        </footer>
+        <!-- #colophon -->
+    </body>
 </html>
