Update Header navigation links

--- a/instructors.html
+++ b/instructors.html
@@ -37,7 +37,7 @@
                                 </a>
                             </li>
                             <li class="c-nav__menu-item">
-                                <a class="c-nav__menu-link h5--secondary" href="#">
+                                <a class="c-nav__menu-link h5--secondary" href="./instructors.html">
                                     Instructors
                                 </a>
                             </li>
