Fix instructor profile Page issues

--- a/instructors.html
+++ b/instructors.html
@@ -189,4 +189,9 @@
         </div>
     </footer>
 </body>
+
+<!-- #colophon -->
+
+<script src="./assets/js/vendors.js"></script>
+<script src="./assets/js/main.js"></script>
 </html>
