Fix minor issues

--- a/single-routine.html
+++ b/single-routine.html
@@ -21,12 +21,7 @@
                     <!-- .site-branding -->
 
                     <nav class="c-nav" id="site-navigation">
-                        <button
-                            class="c-nav__toggle c-nav__toggle--burger js-nav__toggle"
-                            aria-controls="primary-menu"
-                            aria-expanded="false"
-                            aria-label="primary-menu"
-                        >
+                        <button class="c-nav__toggle c-nav__toggle--burger js-nav__toggle" aria-controls="primary-menu" aria-expanded="false" aria-label="primary-menu">
                             <span></span>
                         </button>
                         <div class="c-nav__list js-nav__list">
@@ -35,9 +30,7 @@
                                     <a class="c-nav__menu-link h5--secondary" href="./index.html"> Home </a>
                                 </li>
                                 <li class="c-nav__menu-item">
-                                    <a class="c-nav__menu-link h5--secondary" href="./instructors.html">
-                                        Instructors
-                                    </a>
+                                    <a class="c-nav__menu-link h5--secondary" href="./instructors.html"> Instructors </a>
                                 </li>
                                 <li class="c-nav__menu-item">
                                     <a class="c-nav__menu-link h5--secondary" href="#"> Community </a>
